<resources>
    <string name="app_name">Horizon RetroWave</string>
    <string name="start_button">Start</string>
    <string name="menu_logo_description">Logo głównego menu</string>
    <string name="menu_play">GRAJ</string>
    <string name="menu_garage">GARAŻ</string>
    <string name="menu_rankings">RANKINGI</string>
    <string name="menu_settings">USTAWIENIA</string>
    <string name="menu_exit">WYJŚCIE</string>
    <string name="create_profile">Utwórz profil</string>
    <string name="profile_image_description">Zdjęcie profilu</string>
    <string name="change_profile">Zmień</string>
    <string name="profile_nick_hint">Wpisz Nick</string>
    <string name="play_button">Graj</string>
    <string name="epilepsy_title">Ostrzeżenie o Epilepsji Fotogennej</string>
    <string name="epilepsy_warning_text">Niewielki odsetek osób może doświadczyć napadu padaczkowego pod wpływem migających świateł, kontrastowych wzorów lub szybko zmieniających się obrazów. Takie objawy mogą wystąpić również u osób, u których wcześniej nie rozpoznano epilepsji. Jeśli Ty lub ktoś z Twojej rodziny ma epilepsję albo miał wcześniej napady padaczkowe, przed korzystaniem z aplikacji skonsultuj się z lekarzem.\n\nJeżeli podczas korzystania z aplikacji pojawią się zawroty głowy, zaburzenia widzenia, drgania oczu lub mięśni, utrata świadomości, dezorientacja, mimowolne ruchy albo drgawki, natychmiast przerwij korzystanie z aplikacji i skonsultuj się z lekarzem przed jej ponownym uruchomieniem.</string>
    <string name="exit_confirmation">czy chcesz wyjść ?</string>
    <string name="exit_yes">TAK</string>
    <string name="exit_no">NIE</string>
    <string name="settings_title">USTAWIENIA</string>
    <string name="settings_sound_enabled">DŹWIĘK WŁ.</string>
    <string name="settings_sound_disabled">DŹWIĘK WYŁ.</string>
    <string name="settings_performance_enabled">TRYB WYDAJNOŚCI WŁ.</string>
    <string name="settings_performance_disabled">TRYB WYDAJNOŚCI WYŁ.</string>
    <string name="settings_reset">ZRESETUJ PROFIL</string>
    <string name="reset_profile_confirmation">Czy zresetować profil i uruchomić ponownie?</string>
    <string name="settings_authors">AUTORZY</string>
    <string name="settings_back_description">Zamknij ustawienia</string>
    <string name="settings_website_description">Otwórz stronę Polwoj Interactive</string>
    <string name="credits_authors_title">Autorzy:</string>
    <string name="credits_szymon">Szymon Wojtkiewicz</string>
    <string name="credits_polwoj">Polwoj Interactive</string>
    <string name="credits_inspired_title">Wzorowane na:</string>
    <string name="credits_forza">Forza Horizon 5 Retrowave</string>
    <string name="credits_project_title">W ramach projektu dla:</string>
    <string name="credits_project_school">ZSE Żary &quot;Ekonomik&quot;</string>
    <string name="credits_project_supervisor">Radosław Sobieraj</string>
    <string name="rankings_header_number">NR.</string>
    <string name="rankings_header_name">NAZWA</string>
    <string name="rankings_header_points">PUNKTY</string>
    <string name="rankings_default_player">Gracz</string>
    <string name="rankings_player_photo_description">Zdjęcie profilowe gracza</string>
    <string name="garage_standard_mode">Tryb Standardowy (Zakresy X+5)</string>
    <string name="garage_hard_mode">Tryb Rekordowy (Zakresy 2X)</string>
    <string name="garage_medium_mode">Tryb Szybki (Punkty 2x, Czas 0.5x)</string>
    <string name="garage_car_image_description">Wybrany samochód</string>
    <string name="garage_plate_description">Tablica rejestracyjna, maksymalnie pięć wielkich liter lub cyfr</string>
    <string name="garage_previous_car">Poprzedni samochód</string>
    <string name="garage_next_car">Następny samochód</string>
    <string name="garage_back_description">Powrót do menu</string>
</resources>
